// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@topplethenun/nx-plugin-postcss:init dependencies for package.json adds postcss if not already present 1`] = `
Object {
  "dependencies": Object {
    "existing": "1.0.0",
  },
  "devDependencies": Object {
    "existing": "1.0.0",
    "postcss": "latest",
    "postcss-preset-env": "latest",
  },
  "name": "test-name",
}
`;

exports[`@topplethenun/nx-plugin-postcss:init dependencies for package.json does not add postcss if already present 1`] = `
Object {
  "dependencies": Object {
    "existing": "1.0.0",
  },
  "devDependencies": Object {
    "existing": "1.0.0",
    "postcss": "7",
  },
  "name": "test-name",
}
`;
